# milrag

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: base.yaml  defense.yaml  dynamic.yaml  retrieval.yaml
config/experiments/: exp3_1.yaml  exp3_2.yaml  exp3_3.yaml  exp3_4.yaml  exp3_5.yaml  exp3_6.yaml  exp3_7.yaml  exp4_1.yaml  exp4_2.yaml  exp4_3.yaml  exp4_4.yaml  exp4_5.yaml  exp4_6.yaml  exp4_7.yaml  exp4_8.yaml  exp5_1.yaml  exp5_10.yaml  exp5_2.yaml  exp5_3.yaml  exp5_4.yaml  (+11 more)
data/: README.md
docs/: DATA_BUILD_GUIDE.md  ETC_TRUSTRAG_DIFF.md  GAP_ANALYSIS.md  NEXT_STEPS.md  PROGRESS.md  README.md  ch3_data.md  ch4_dynamic.md  ch5_defense.md  ch6_system.md
eval/: __init__.py  metrics.py  run_eval.py
scripts/: build_embeddings_api.py  run_all.sh  run_build_adversarial.py  run_build_qa.py  run_chunk.py  run_clean.py  run_exp3_1.sh  run_exp3_2.sh  run_exp3_3.sh  run_exp3_4.sh  run_exp3_5.sh  run_exp3_6.sh  run_exp3_7.sh  run_exp4_1.sh  run_exp4_2.sh  run_exp4_3.sh  run_exp4_4.sh  run_exp4_5.sh  run_exp4_6.sh  run_exp4_7.sh  run_exp4_8.sh  run_exp5_1.sh  run_exp5_10.sh  run_exp5_2.sh  run_exp5_3.sh  run_exp5_4.sh  run_exp5_5.sh  run_exp5_6.sh  run_exp5_7.sh  run_exp5_8.sh  run_exp5_9.sh  run_exp6_1.sh  run_exp6_2.sh  run_exp6_3.sh  run_exp6_4.sh  run_exp6_5.sh  run_exp6_6.sh  run_index.py  run_ner.py  save_fm_corpus.py  (+1 more)
tests/: test_cluster_filter.py  test_consistency.py  test_decision.py  test_detector.py  test_entropy_trend.py  test_fuse.py  test_hybrid.py  test_inject.py  test_metrics.py  test_ngram.py  test_reformulate.py
(+1003 files in other folders)
