[project]
name = "milrag"
version = "0.2.0"                         # Qwen3 迁移版本
description = "军事情报问答 鲁棒动态 RAG（论文实验代码：Qwen3-8B 主线 + 领域微调 + 动态检索 + 对抗防御）"
requires-python = ">=3.10,<3.13"
dependencies = [
  "torch>=2.4", "transformers>=4.51", "peft>=0.14",
  "sentence-transformers", "faiss-cpu>=1.8.0", "elasticsearch>=8.13",
  "scikit-learn", "numpy", "networkx", "python-louvain",
  "rouge-score", "nltk", "pyyaml", "pydantic", "fastapi", "streamlit",
  "vllm>=0.7",          # 仅吞吐/部署路径；白盒信号路径用 HF eager (Qwen3 已验证)
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
